# beeminder_api_client

./: README.md  beeminder.py  beeminder_cli.py  models.py  setup.cfg  upgrade_script.md
beeminder_client/: beeminder_cli.py
src/beeminder_client/: __init__.py  beeminder.py  beeminder_cli.py
src/beeminder_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
