[metadata]
name = beeminder-client
version = 0.1.5
author = Your Name
author_email = your.email@example.com
description = A Python client library and terminal interface for Beeminder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ianm199/beeminder_api_client
project_urls =
    Bug Tracker = https://github.com/ianm199/beeminder_api_client/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Office/Business :: Financial :: Accounting

[options]
package_dir =
    = src
packages =
    beeminder_client
python_requires = >=3.8
install_requires =
    requests>=2.25.1
    pydantic>=2.0.0
    windows-curses;platform_system=="Windows"

[options.entry_points]
console_scripts =
    beeminder-cli = beeminder_client.beeminder_cli:main